--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ django-bootstrap4==24.4
 djangorestframework==3.15.2
 djangorestframework_simplejwt==5.4.0
 drf-yasg==1.21.9
+gunicorn==23.0.0
 inflection==0.5.1
 packaging==24.2
 psycopg2-binary==2.9.10
